--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
   "license": [
     "GPL-3.0+"
   ],
-
+  "require": {
+    "php": ">=5.5.0"
+  },
   "autoload": {
     "files": ["registration.php"],
     "psr-4": {
