change repo name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "unityreports/claro",
+  "name": "intelive/claro",
   "description": "Use historical data to uncover your most profitable merchandise, channels, and customer segments",
   "author": [
       {
@@ -9,7 +9,7 @@
       }
    ],
   "type": "magento2-module",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "license": [
     "GPL-3.0+"
   ],
