--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
       {
          "name": "Intelive.",
          "email": "intelive.claro@gmail.com",
-         "homepage": "https://www.unityreports.com/"
+         "homepage": "https://www.clarobi.com/"
       }
    ],
   "type": "magento2-module",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "license": [
     "GPL-3.0+"
   ],
